--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -141,13 +141,13 @@ details.faq-box {
   border-radius: 8px;
   margin: 1em 0;
   padding: 0.5em 1em;
-  background-color: #f9f9f9;
+  background-color: #1e2a38;
   transition: all 0.3s ease;
   cursor: pointer;
 }
 
 details.faq-box[open] {
-  background-color: #eef6ff;
+  background-color: #1e2a38;
   border-color: #007acc;
 }
 
@@ -179,13 +179,13 @@ details.troubleshooting-box {
   border-radius: 8px;
   margin: 1em 0;
   padding: 0.5em 1em;
-  background-color: #f9f9f9;
+  background-color: #1e2a38;
   transition: all 0.3s ease;
   cursor: pointer;
 }
 
 details.troubleshooting-box[open] {
-  background-color: #eef6ff;
+  background-color: #1e2a38;
   border-color: #007acc;
 }
 
