fixed decky button and boxes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -214,11 +214,11 @@ details.troubleshooting-box p {
 
 @media (prefers-color-scheme: dark) {
   /* Dark background for content boxes */
-  .content-box {
-    background-color: #1f1f1f;
-    border: 1px solid #333;
-    color: #e0e0e0;
-  }
+  // .content-box {
+  //   background-color: #1f1f1f;
+  //   border: 1px solid #333;
+  //   color: #e0e0e0;
+  // }
 
   /* FAQ and Troubleshooting boxes */
   // details.faq-box,
