--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -39,8 +39,13 @@
       {% if page.header.actions %}
         <p>
         {% for action in page.header.actions %}
-          <a href="{{ action.url | relative_url }}" class="{{ action.class | default: 'button' }}">{{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a>
+          <a href="{{ action.url | relative_url }}"
+            class="{{ action.class | default: 'button' }}"
+            {% if action.target %}target="{{ action.target }}"{% endif %}>
+            {{ action.label }}
+          </a>
         {% endfor %}
+
         </p>
       {% endif %}
     </div>
