--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5QM6MSX6"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+    {% include promo-banner.html %}
     {% include_cached skip-links.html %}
     {% include_cached masthead.html %}
 
